Cleanup IDE warnings